--- a/styles.css
+++ b/styles.css
@@ -128,8 +128,9 @@ body {
     height: auto;
     font-size: 24px;
     position: absolute;
-    top: 175px;
+    top: 97px;
     left: 50%;
+    word-spacing: 83px;
     transform: translate(-50%, -50%);
 
     z-index: 0;
